Release 0.1.3 - 20XX/XX/XX

Release 0.1.2 - 2012/07/18
  NEW FEATURES
    Adds new API: supports bulk import operation

Release 0.1.1 - 2012/07/09
  NEW FEATURES
    Adds new API: deletePartialTable method in TreasureDataClient class

  BUG FIXMES
    Fixes bug: cannot submit query strings with Job API

Release 0.1.0 - 2012/05/01