@@ -1,4 +1,6 @@
 Release 0.1.3 - 20XX/XX/XX
+  NEW FEATURES
+    Adds new API: supports RetryClient, which is to retry http requests
 
 Release 0.1.2 - 2012/07/18
   NEW FEATURES
